Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntegerTextField.quorum
class Main
    integer int
    action Main
        int = cast(integer, "5")
        if int = 5
            output "passed"
        end
    end
end