Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerBooleanField.quorum
class Main
    integer int
    action Main
        int = cast(integer, true)
    end
end
